--- a/pages/rule_desc/index.wxml
+++ b/pages/rule_desc/index.wxml
@@ -2,13 +2,13 @@
   <view class="tv-title">小程序简介</view>
 
   <view class="tv-content">
-    步数多多是一款运动健康为主的小程序，您可以通过每日的运动步数免费兑换平台内的任何商品。当然您还可以通过邀请好友得方式快速积攒金币兑换心仪的商品。
+    这是一款运动健康为主的小程序，您可以通过每日的运动步数免费兑换平台内的任何商品。当然您还可以通过邀请好友得方式快速积攒金币兑换心仪的商品。
   </view>
 
   <view class="tv-title">什么是金币</view>
 
   <view class="tv-content">
-    金币是用户在步数多多里获得的奖励，可以在商城里兑换各种免费包邮的商品。
+    金币是用户在小程序里获得的奖励，可以在商城里兑换各种免费包邮的商品。
   </view>
 
   <view class="tv-content">
@@ -20,7 +20,7 @@
   <view class="tv-title-h1">1、通过步数兑换</view>
 
   <view class="tv-content">
-    · 步数多多的步数数据来源于微信运动，并且会跟着微信运动每日清零，记得及时兑换。
+    · 小程序的步数数据来源于微信运动，并且会跟着微信运动每日清零，记得及时兑换。
   </view>
 
   <view class="tv-content">
@@ -92,6 +92,6 @@
   </view>
 
   <view class="tv-content">
-    步数多多提倡健康运动、自由兑换。一旦出现上述违规或恶意刷步行为，步数多多有缘判定订单无效进行账户清零。严重者将做永久封号处理。
+    本程序提倡健康运动、自由兑换。一旦出现上述违规或恶意刷步行为，小程序平台有权判定订单无效进行账户清零。严重者将做永久封号处理。
   </view>
 </view>
