--- a/pages/mall/index.wxss
+++ b/pages/mall/index.wxss
@@ -1,8 +1,11 @@
+page {
+  background: #F6F9FF;
+}
 
 .swiper1 {
   width: 750rpx;
   height: 375rpx;
-  background: white;
+  margin-top: 21rpx;
 }
 
 .swiper1 image{
@@ -10,25 +13,13 @@
   height: 95%;
   display: flex;
   margin: 0 auto;
+  border-radius: 10rpx;
 }
 
-.goods-tag{
-  display: flex;
-  background-color: #F2F2F2;
-  padding: 24rpx 24rpx 0 24rpx;
-}
-
-.goods-tag .img-tag{
-  width: 60rpx;
-  height: 60rpx;
-}
-
-.goods-tag .tv-tag{
-  border: 1rpx solid red;
-  color: red;
-  padding: 0 25rpx 0 25rpx;
-  text-align: center;
-  margin-left: 30rpx;
+.img-goods-tag{
+  width: 100%;
+  height: 84rpx;
+  margin-top: 12rpx;
 }
 
 .goods-container{
@@ -40,17 +31,16 @@
   /* 告诉浏览器以标准盒子模型计算元素的总宽度和总高度 */
   box-sizing: content-box;
   padding: 24rpx;
-  background-color: #F2F2F2;
 }
 
 .goods-box{
   width: 340rpx;
-  height: 670rpx;
+  height: 550rpx;
   background-color: white;
   /* 规定内容溢出元素组件时处理逻辑 */
   overflow: hidden;
   margin-bottom: 24rpx;
-  border-radius: 5rpx;
+  border-radius: 20rpx;
 }
 
 .goods-box .img-box{
@@ -71,48 +61,52 @@
   /* 设置不换行 */
   white-space: nowrap;
   overflow: hidden;
-  font-size: 32rpx;
+  font-size: 26rpx;
   font-weight: bold;
-  margin: 10rpx 0 0 20rpx;
+  margin: 16rpx 0 0 17rpx;
   color: black;
 }
 
 .goods-box .goods-price{
   overflow: hidden;
-  font-size: 35rpx;
-  margin-left:20rpx;
-  color:#e64340;
+  font-size: 32rpx;
+  margin-left:17rpx;
+  color:#E81111;
 }
 
 .goods-box .unit{
   font-size: 20rpx;
-  color:#e64340;
+  color:#E81111;
   margin: 13rpx 0 10rpx 5rpx;
 }
 
-.goods-box .goods-plus{
+/* .goods-box .goods-plus{
   font-size: 30rpx;
   font-weight: bold;
   margin: 4rpx 0 0 20rpx;
-}
+} */
 
-.goods-original-price{
+/* .goods-original-price{
   margin-left: 20rpx;
   font-size: 25rpx;
   color: #aaa;
   text-decoration: line-through;
+} */
+
+
+.price-group{
+  width:100%;
 }
 
-
-
-
 .goods-box .goods-convert{
-  border-top: 1px solid #f5f5f5;
-  width: 100%;
-  height: 85rpx;
+  position: relative;
+  float: right;
+  width: 124rpx;
+  height: 40rpx;
+  font-size: 26rpx;
   text-align: center;
-  line-height: 85rpx;
-  font-size: 30rpx;
-  color:red;
-  margin: 0 auto;
+  color:#FE8503;
+  border: 1px solid #FE8503;
+  border-radius: 30rpx;
+  margin-right: 20rpx;
 }
