--- a/pages/order_complete/index.wxml
+++ b/pages/order_complete/index.wxml
@@ -4,7 +4,7 @@
   <view class="tv">兑换完成</view>
   <view class="tv">工作人员正在快速审核订单</view>
 
-  <button class="btn">分享给朋友和家人</button>
+  <button class="btn" open-type="share">分享给朋友和家人</button>
 
 
 
