--- a/pages/order_record/index.wxss
+++ b/pages/order_record/index.wxss
@@ -1,12 +1,12 @@
 
 page{
   height: 100%;
+  background: #F6F9FF;
 }
 
 .index-container{
   width: 100%;
   height: 100%;
-  background: #F8F8F8;
   padding-top: 20rpx;
 }
 
@@ -15,43 +15,44 @@ page{
 }
 
 .order{
-  height: 320rpx;
+  height: 370rpx;
   background: #fff;
   border-radius: 10rpx;
   padding-left: 25rpx;
   padding: 25rpx;
   margin: 0 20rpx 0 20rpx;
 }
-
-.div-line{
-  height: 20rpx;
+.order .icon_logo{
+  width: 45rpx;
+  height: 45rpx;
 }
 
-.order .tv-order-code{
-  font-weight: bold;
-  font-size: 32rpx;
-}
-
-.order .order-code{
-  color: red;
+.order .title{
   font-size: 30rpx;
-  margin-left: 10rpx;
+  vertical-align: top;
+  color: rgba(0, 0, 0, 0.96);
+  margin-left: 15rpx;
 }
 
 .order .order-status{
   float: right;
+  font-size: 28rpx;
+  vertical-align: top;
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .order .pro-img{
   width: 150rpx;
   height: 150rpx;
-  margin: 25rpx 0 15rpx 0;
+  border-radius: 10rpx;
+  margin-top: 14rpx;
 }
 
 .order .cl-group{
   display: inline-block;
-  margin-left: 20rpx;
   vertical-align:top;
+  margin-left: 30rpx;
+  margin-top: 14rpx;
 }
 
 .cl-group .name{
@@ -59,31 +60,68 @@ page{
   line-height: 75rpx;
   font-size: 30rpx;
   font-weight: bold;
-  margin-top: 25rpx;
 }
 
-.cl-group .price{
+.cl-group .cl-price-group{
+  height: 75rpx;
+}
+
+.cl-group .cl-price-group .price{
   height: 75rpx;
   line-height: 75rpx;
-  font-size: 30rpx;
-  color: red;
+  font-size: 26rpx;
+  color: rgba(0, 0, 0, 0.8);
 }
 
-.order .tv-order-number{
+.cl-group .unit{
+  height: 75rpx;
+  line-height: 75rpx;
+  font-size: 20rpx;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.cl-group .count{
+  height: 75rpx;
+  line-height: 75rpx;
+  font-size: 26rpx;
+  color: rgba(0, 0, 0, 0.8);
+  margin-left: 100rpx;
+}
+
+.number-group{
+  height: 40rpx;
+  margin-top: 10rpx;
+}
+
+.order .tv-order{
   font-weight: bold;
-  font-size: 32rpx;
+  vertical-align: top;
+  font-size: 25rpx;
+  color: #000000;
 }
 
 .order .order-number{
-  color: red;
-  font-size: 30rpx;
-  margin-left: 10rpx;
+  font-size: 25rpx;
+  vertical-align: top;
+  margin-left: 18rpx;
+  color: rgba(0, 0, 0, 0.7);
 }
 
-.order .order-time{
+
+.order .goods-convert{
   float: right;
+  width: 153rpx;
+  height: 40rpx;
+  font-size: 26rpx;
+  text-align: center;
+  color:#FE8503;
+  border: 1px solid #FE8503;
+  border-radius: 30rpx;
+  margin-top: -15rpx;
 }
 
+
+/* 空态页 */
 .empty-text{
   text-align: center;
   font-size: 32rpx;
