--- a/pages/mine/index.wxss
+++ b/pages/mine/index.wxss
@@ -74,6 +74,54 @@ page {
   color: #FFFFFF;
 }
 
+.entry-info{
+  width: 100%;
+  height: 170rpx;
+  background: #FFFFFF;
+  margin-bottom: 22rpx;
+}
+
+.group-entry{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 90%;
+  margin-left: 5%;
+}
+.group-entry .group-info{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.group-info .num{
+  font-size: 40rpx;
+  color: #FF8504;
+  margin-top: 38rpx;
+}
+
+.group-info .title{
+  font-size: 30rpx;
+  color: #333333;
+  margin-top: 18rpx;
+}
+
+.img-bg-entry{
+  position: absolute;
+  width: 100%;
+  height: 170rpx;
+}
+.group-entry{
+  position: absolute;
+}
+
+.ver-line{
+  width: 1rpx;
+  height: 80rpx;
+  margin-top: 45rpx;
+  background: rgba(0, 0, 0, 0.2);
+}
+
 .item-group {
   width: 100%;
   height: 114rpx;
