--- a/pages/home/index.wxss
+++ b/pages/home/index.wxss
@@ -115,8 +115,38 @@ page {
 .cs-img-steps-bottom {
   width: 100%;
   height: 85rpx;
-  margin-top: -50rpx;
+  /* margin-top: -50rpx; */
 }
+
+.steps-info {
+  /* position: absolute; */
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin-top: -110rpx;
+}
+
+.steps-info .item {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: 13px;
+  line-height: 20px;
+}
+
+.steps-info .item .text {
+  font-size: 26rpx;
+  margin-bottom: 10rpx;
+  color: #000000;
+}
+
+.steps-info .item .tv {
+  font-size: 26rpx;
+  color: #5D5D5D;
+  margin-bottom: 10rpx;
+  padding-bottom: 10rpx;
+}
+
 
 .bg-line {
   width: 100%;
