--- a/pages/home/index.wxml
+++ b/pages/home/index.wxml
@@ -111,4 +111,4 @@
 </view>
 
 
-<template is="apifmLogin" data="{{wxlogin: wxlogin}}" />
+<template is="apifmLogin" data="{{wxlogin: wxlogin,canIUseGetUserProfile: canIUseGetUserProfile}}" />
