--- a/pages/mall/index.wxml
+++ b/pages/mall/index.wxml
@@ -35,4 +35,4 @@
   </view>
 </view>
 
-<template is="apifmLogin" data="{{wxlogin: wxlogin}}" />
+<template is="apifmLogin" data="{{wxlogin: wxlogin,canIUseGetUserProfile: canIUseGetUserProfile}}" />
