--- a/pages/mine/index.wxml
+++ b/pages/mine/index.wxml
@@ -104,4 +104,4 @@
 
 </view>
 
-<template is="apifmLogin" data="{{wxlogin: wxlogin}}" />
+<template is="apifmLogin" data="{{wxlogin: wxlogin,canIUseGetUserProfile: canIUseGetUserProfile}}" />
