--- a/template/authlogin/index.wxml
+++ b/template/authlogin/index.wxml
@@ -25,8 +25,8 @@
         </view>
         
       <!-- 适配新版本获取用户信息api -->
-      <button wx:if="{{canIUseGetUserProfile}}" class="l" bindtap="processLogin">(新版)允许</button>
-      <button wx:else class="l" open-type="getUserInfo" bindgetuserinfo="processLogin">(旧版)允许</button>
+      <button wx:if="{{canIUseGetUserProfile}}" class="l" bindtap="processLogin">允许</button>
+      <button wx:else class="l" open-type="getUserInfo" bindgetuserinfo="processLogin">允许</button>
       
       <button class="c" bindtap="cancelLogin" type="defult">暂不登录</button>
     </view>
